# join-the-siege

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.disabled  README.md  pyproject.toml  requirements.txt  test_transcription.py
.github/workflows/: docker-build.yml
src/: app.py  bert_classifier.py  classifier.py  classifier_audio.py  classifier_text.py  compare_models_audio.py  compare_models_text.py  predict_distilbert.py  run_gemma.py  train_distilbert_classifier.py  train_model.py  train_model_text.py
src/classifiers/: baseline_audio.py  baseline_text.py  bert_audio.py  bert_text.py  cnn_audio.py  gemini.py  gemini_audio.py  gemini_multimodal.py
src/trainers/: train_audio_baseline.py  train_audio_baselines.py  train_audio_bert.py  train_audio_cnn.py  train_text_baseline.py  train_text_bert.py
src/utils/: audio_features.py  audio_utils.py  extract_text.py  transcribe_audio.py
tests/: test_api_with_model.py  test_app.py  test_audio_api.py  test_audio_classification.py  test_extract_text.py  test_model_inference.py
tests/functional/: test_api_routes.py  test_app.py  test_audio_api.py  test_extract_text.py  test_text_api.py  test_whisper_transcription.py
tests/unit/: test_audio_classification.py  test_baseline_audio.py  test_baseline_audio_classifier.py  test_baseline_text.py  test_baseline_text_classifier.py  test_bert_audio_classifier.py  test_bert_text_classifier.py  test_cnn_audio_classifier.py  test_gemini_multimodal_classifier.py  test_text_classification.py  test_unsupported.py
tests/unit/test_utils/: test_audio_features.py  test_extract_text.py  (+1 more)
